--- a/gilded-rose/build.gradle
+++ b/gilded-rose/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     testImplementation 'org.assertj:assertj-core:3.22.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation 'org.mockito:mockito-core:4.5.1'
     testImplementation 'com.approvaltests:approvaltests:18.0.0'
 }
 
